# alloy-zksync

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  crates.js  deny.toml  help.html  search-index.js  settings.html  src-files.js
.github/workflows/: ci.yml  pr-title.yml
alloy_zksync/: all.html  index.html  sidebar-items.js
alloy_zksync/contracts/: index.html  sidebar-items.js
alloy_zksync/network/: index.html  sidebar-items.js  struct.Zksync.html
alloy_zksync/node_bindings/: enum.AnvilZKsyncError.html  enum.EraTestNodeError.html  index.html  sidebar-items.js  struct.AnvilZKsync.html  struct.AnvilZKsyncInstance.html  struct.EraTestNode.html  struct.EraTestNodeInstance.html
alloy_zksync/provider/: constant.ETHER_L1_ADDRESS.html  constant.REQUIRED_L1_TO_L2_GAS_PER_PUBDATA_LIMIT.html  enum.L1CommunicationError.html  fn.scale_l1_gas_limit.html  fn.zksync_provider.html  index.html  sidebar-items.js  struct.DepositExecutor.html  struct.DepositRequest.html  struct.Eip712Fee.html  struct.L1TransactionReceipt.html  trait.ProviderBuilderExt.html  trait.ZksyncProvider.html  trait.ZksyncProviderWithWallet.html
alloy_zksync/types/: enum.BlockStatus.html  enum.ExecuteTransactionCommon.html  enum.FeeParams.html  enum.OpProcessingType.html  enum.PriorityQueueType.html  enum.TransactionStatus.html  index.html  sidebar-items.js  struct.BaseSystemContractsHashes.html  struct.BaseTokenConversionRatio.html  struct.BlockDetails.html  struct.BridgeAddresses.html  struct.Eip712Fee.html  struct.Execute.html  struct.FeeModelConfigV1.html  struct.FeeModelConfigV2.html  struct.FeeParamsV1.html  struct.FeeParamsV2.html  struct.InputData.html  struct.L1BatchDetails.html  struct.L1TxCommonData.html  struct.L1VerifierConfig.html  struct.L2ToL1Log.html  struct.L2ToL1LogProof.html  struct.L2TxCommonData.html  struct.Log.html  struct.Proof.html  struct.ProtocolUpgradeTxCommonData.html  struct.ProtocolVersion.html  struct.StorageLog.html  struct.StorageProof.html  struct.Transaction.html  struct.TransactionDetails.html
alloy_zksync/utils/: constant.ETHER_L1_ADDRESS.html  fn.apply_l1_to_l2_alias.html  index.html  sidebar-items.js
alloy_zksync/wallet/: index.html  sidebar-items.js  struct.ZksyncWallet.html
examples/: deploy.rs  deposit.rs  deposit_erc20.rs  deposit_eth.rs  showcase.rs
search.desc/alloy_zksync/: alloy_zksync-desc-0-.js
src/: lib.rs  utils.rs
src/alloy_zksync/: lib.rs.html  utils.rs.html
src/contracts/: mod.rs
src/network/: header.rs  header_response.rs  mod.rs  receipt_envelope.rs  receipt_response.rs  transaction_request.rs  transaction_response.rs  tx_envelope.rs  tx_type.rs  unsigned_tx.rs
src/node_bindings/: anvil_zksync.rs  era_test_node.rs  mod.rs
src/provider/: deposit.rs  l1_communication_error.rs  l1_transaction_receipt.rs  (+2 more)
(+243 files in other folders)
