[package]
name = "alloy-zksync"
version = "0.9.0"
edition = "2021"
authors = ["Igor Aleksanov <popzxc@yandex.ru>"]
license = "MIT OR Apache-2.0"
description = "ZKsync network implementation for alloy"

[dependencies]
alloy = { version = "0.9.2", default-features = false, features = [
  "rlp",
  "serde", # TODO: Make optional along with other `serde` dependencies
  "rpc-types",
  "signer-local",
  "reqwest",
  "contract",
] }
async-trait = "0.1.80"
chrono = { version = "0.4.38", features = ["serde"] }
k256 = "0.13.3"
rand = "0.8.5"
reqwest = "0.12.8"
serde = "1.0.203"
thiserror = "2.0.10"
tracing = "0.1.40"
url = "2.5.2"

[dev-dependencies]
tokio = { version = "1.43.0", features = ["full"] }
anyhow = "1"
hex = "0.4.3"
assert_matches = "1.5.0"
serde_json = "1.0.1"
jsonrpsee = { version = "0.24.7", features = ["server"] }
zksync_types = "=26.2.1-non-semver-compat"
